# variadic-state-machine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  meson.build
.github/workflows/: build.yml
example/: events.hpp  main.cpp  sm_data.hpp  states.cpp  states.hpp
examples/: meson.build
examples/blinking/: main.cpp
examples/traffic_lights/: main.cpp  states.cpp  states.hpp
include/: meson.build  vsm.hpp
include/vsm/: vsm.hpp
tests/: meson.build  states.cpp  states.hpp  test.cpp  tests.cpp
